# IR_SQL_Converter

./: .gitignore  6d_pg_json  CMakeLists.txt  README.md  postgres_plan
c_test/: CMakeLists.txt  c_test_main.c
cpp_test/: CMakeLists.txt  cpp_test_duckdb.cpp  cpp_test_pg.cpp
inc/: c_interface.h  cpp_interface.h  duckdb_plan_to_ir.h  duckdb_version_compat.h  ir_to_duckdb_plan.h  ir_to_nodestr.h  ir_to_sql.h  nodestr_to_ir.h  parsetree_to_ir.h  schema_parser.h  simplest_ir.h  util.h
src/: c_interface.cpp  cpp_interface.cpp  duckdb_plan_to_ir.cpp  ir_to_duckdb_plan.cpp  ir_to_nodestr.cpp  ir_to_sql.cpp  nodestr_to_ir.cpp  parsetree_to_ir.cpp  schema_parser.cpp  simplest_ir_serializer.cpp
